fix(css): don't show horizontal scrollbar when it isn't needed

--- a/intranet/static/css/schedule.scss
+++ b/intranet/static/css/schedule.scss
@@ -40,10 +40,6 @@
     position: relative;
 }
 
-body {
-    overflow-x: scroll;
-}
-
 .schedule {
     margin: 0;
     padding: 0;
